--- a/apps/psp-front/src/index.css
+++ b/apps/psp-front/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'font-awesome/css/font-awesome.min.css';
+
 
 body {
   margin: 0;
