--- a/apps/web-shop-front/src/index.css
+++ b/apps/web-shop-front/src/index.css
@@ -15,3 +15,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  max-height: 200%;
+}
