chore: change theme

--- a/packages/ui-components/src/data-display/Table/index.css
+++ b/packages/ui-components/src/data-display/Table/index.css
@@ -1,22 +1,28 @@
-
 .custom-table {
-    text-align: center;
-    border-collapse: collapse;
-    border: 3px solid #ddd;
-    width: 100%;
-  }
-  
-.custom-table td, .custom-table th {
-    border: 1px solid #ddd;
-    padding: 8px;
+  text-align: center;
+  border-collapse: collapse;
+  border: 3px solid #ddd;
+  width: 100%;
 }
 
-.custom-table tr:hover {background-color: #ddd;}
+.custom-table td,
+.custom-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.custom-table tr a {
+  color: #ddd;
+}
+
+.custom-table tr:hover {
+  background-color: #3553e4;
+}
 
 .custom-table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #3553e4;
-    color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #3553e4;
+  color: white;
 }
