--- a/apps/paypal-provider/src/styles/global.css
+++ b/apps/paypal-provider/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 /* purgecss start ignore */
 @tailwind base;
@@ -9,6 +10,11 @@
 
 html,
 body {
+  margin: 0;
+  font-family: 'Playfair Display', serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #131313;
 }
 
 @layer base {
